# microbial-qc-survey

./: .gitignore  README.md  app.py  data.py  pyproject.toml  scoring.py  storage.py
.streamlit/: secrets.toml.example
docs/superpowers/plans/: 2026-06-10-microbial-qc-survey.md
docs/superpowers/specs/: 2026-06-10-microbial-qc-survey-design.md
tests/: test_app.py  test_data.py  test_scoring.py  test_storage.py
