[project]
name = "microbial-qc-survey"
version = "0.1.0"
description = "Streamlit survey collecting community priority weights for a microbial genomics benchmark."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.0",
    "numpy>=1.26",
    "gspread>=6.0",
    "google-auth>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
